src/core/jit/snapshots/tailcall__core__jit__synth__tests__nested.snap
---
source: src/core/jit/synth.rs
expression: val
---
{
  "data": {
    "posts": [
      {
        "id": 1,
        "title": "Some Title",
        "user": {
          "id": 1,
          "name": "foo"
        }
      },
      {
        "id": 2,
        "title": "Not Some Title",
        "user": {
          "id": 2,
          "name": "bar"
        }
      }
    ]
  }
}
