src/core/jit/snapshots/tailcall__core__jit__synth__tests__posts.snap
---
source: src/core/jit/synth.rs
expression: val
---
{
  "data": {
    "posts": [
      {
        "id": 1
      },
      {
        "id": 2
      }
    ]
  }
}
