src/core/jit/snapshots/tailcall__core__jit__synth__tests__user.snap
---
source: src/core/jit/synth.rs
expression: val
---
{
  "data": {
    "user": {
      "id": 1
    }
  }
}
